syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.externaldns.v1;

import "org/project_planton/provider/kubernetes/addon/externaldns/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

//input for external-dns stack
message ExternalDnsStackInput {
  //target cloud-resource
  ExternalDns target = 1;
  //provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
