syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.zalandopostgresoperator.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/addon/zalandopostgresoperator/v1/spec.proto";
import "org/project_planton/provider/kubernetes/addon/zalandopostgresoperator/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//zalando-postgres-operator
message ZalandoPostgresOperator {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'ZalandoPostgresOperator'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  ZalandoPostgresOperatorSpec spec = 4 [(buf.validate.field).required = true];

  //status
  ZalandoPostgresOperatorStatus status = 5;
}

//zalando-postgres-operator status.
message ZalandoPostgresOperatorStatus {
  //stack-outputs
  ZalandoPostgresOperatorStackOutputs outputs = 1;
}
