syntax = "proto3";

package project.planton.credential.kubernetesclustercredential.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/shared.proto";

// KubernetesClusterCredentialSpec message represents the specification required to create or connect a Kubernetes Cluster on the Planton Cloud Platform.
// This message consolidates all necessary input parameters to establish a connection with a Kubernetes cluster, ensuring accurate configuration and validation of credentials.
// Fields include environment information, Kubernetes provider details, and credentials for GKE clusters.
message KubernetesClusterCredentialSpec {
  // Information about the environment in which the Kubernetes cluster credential is being used.
  // This field is used to provide additional context, such as the associated organization and environment details.
  project.planton.shared.ApiResourceEnvironmentInfo environment_info = 99;

  // The Kubernetes provider, specifying the type of cluster (e.g., gcp_gke, aws_eks, azure_aks).
  // For more detailed information, refer to the official documentation of each provider.
  KubernetesProvider kubernetes_provider = 1;

  // Credential specification for GCP GKE provider.
  // This field contains detailed information for connecting to a Google Kubernetes Engine (GKE) cluster.
  KubernetesClusterCredentialGkeCluster gke_cluster = 2;
}

// KubernetesClusterCredentialGkeCluster message represents the specification required to connect to a Google Kubernetes Engine (GKE) cluster.
// This message consolidates the necessary input parameters for establishing a secure connection with a GKE cluster.
// Fields include the cluster endpoint, CA data, and service account key.
message KubernetesClusterCredentialGkeCluster {
  // The cluster endpoint for the GKE cluster.
  // This is a required field and must contain the URL endpoint for the GKE cluster.
  string cluster_endpoint = 1 [
    (buf.validate.field).required = true
  ];

  // The cluster Certificate Authority (CA) data for the GKE cluster.
  // This is a required field and must contain the base64 encoded CA certificate.
  string cluster_ca_data = 2 [
    (buf.validate.field).required = true
  ];

  // The base64 encoded Google Service Account JSON key.
  // This is a required field and must be a valid base64 encoded string representing the service account key.
  string service_account_key_base64 = 3 [
    (buf.validate.field).required = true
  ];
}

// KubernetesProvider enum represents the various Kubernetes providers supported by the Planton Cloud Platform.
// This enumeration allows specifying the type of Kubernetes cluster being used, such as GKE, EKS, or AKS, with additional context on each.
enum KubernetesProvider {
  kubernetes_provider_unspecified = 0; // Unspecified Kubernetes provider.
  gcp_gke = 1;                         // Google Kubernetes Engine (GKE) - A managed Kubernetes service by Google Cloud that provides automated cluster management and scaling.
  aws_eks = 2;                         // Amazon Elastic Kubernetes Service (EKS) - A managed Kubernetes service by AWS that simplifies the deployment and management of Kubernetes clusters.
  azure_aks = 3;                       // Azure Kubernetes Service (AKS) - A managed Kubernetes service by Microsoft Azure that provides Kubernetes cluster orchestration and management.
}
